Layout bug fixes

--- a/src/components/Layout/ChangeArrow/ChangeArrow.css
+++ b/src/components/Layout/ChangeArrow/ChangeArrow.css
@@ -473,7 +473,7 @@
     .nextArrowUpDown {
 
         position: absolute;
-        top: 980px;
+        top: 990px;
         transition: top 1s;
     }
     
